# pssst.rs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: benchmark.rs
examples/: compatibility.rs
src/: lib.rs
tests/: test.rs
