[package]
name = "pssst"
version = "0.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ctz/pssst.rs"
documentation = "https://docs.rs/pssst"
description = "Implementation of PSSST: Packet Security for Stateless Server Transactions"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Joe Birr-Pixton <jbp@jbp.io>"
]

[features]

[dependencies]
byteorder = "1"
rand_core = "0.5"
x25519-dalek = "1"
aes-gcm = "0.6"
sha2 = "0.9"
subtle = "2"

[dev-dependencies]
